feat: add initial env storage endpoints
